--- a/src/app/request-service/RequestService.module.css
+++ b/src/app/request-service/RequestService.module.css
@@ -1,13 +1,13 @@
 .container {
   min-height: 100vh;
-  background: #111;
+  background: #f3f1eb;;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 2rem;
   position: relative;
   z-index: 2;
-  padding-top: 64px;
+  padding-top: 80px;
 }
 
 .content {
